force-app/main/default/objects/DevCore__Bisnode_Account__c/DevCore__Bisnode_Account__c.object-meta.xml
<CustomObject>
    <label>Bisnode Account</label>
    <nameField>
        <label>Bisnode Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bisnode Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>