force-app/main/default/objects/DevCore__Bisnode_Account__c/fields/DevCore__Bisnode_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Account_Number__c</fullName>
    <displayFormat>BISNODE-ACC-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Bisnode Account Number</label>
    <type>AutoNumber</type>
</CustomField>