force-app/main/default/objects/DevCore__Bisnode_Account__c/fields/DevCore__Bisnode_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Client_Name__c</fullName>
    <description>API Name of the Bisnode Client custom meta-data record to use for this account (client settings)</description>
    <inlineHelpText>API Name of the Bisnode Client custom meta-data record to use for this account (client settings)</inlineHelpText>
    <label>Bisnode Client Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>