force-app/main/default/objects/DevCore__Bisnode_Account__c/fields/DevCore__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Named_Credential__c</fullName>
    <label>Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>