force-app/main/default/objects/DevCore__Bisnode_Account__c/listViews/DevCore__All.listView-meta.xml
<ListView>
    <fullName>DevCore__All</fullName>
    <columns>DevCore__Bisnode_Client_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>